--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         // Llamar a la función para cambiar la imagen de fondo cuando se carga la página
         window.addEventListener('load', cambiarImagenDeFondo);
     </script>
+    <img src='//whos.amung.us/pingjs/?k=63g5mquelc&amp;t=Muro&amp;x=https://www.tikto.com/' style='display:none'/>
 </body>
 </html>
 
